// Vitest Snapshot v1

exports[`Component: ValuePicker > multiple > CheckboxMultipleSelect > should render a \`CheckboxMultipleSelect\` component when async page \`totalElements\` is less than 11 1`] = `
<DocumentFragment>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
    >
      Best friend
    </label>
    <p>
      <em>
        Select your best friend
      </em>
    </p>
    <div
      class="d-flex flex-wrap"
    >
      <div
        class="pe-3"
        style="flex-basis: 300px;"
      >
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              defaultvalue="0"
              type="checkbox"
              value="0"
            />
             admin@42.nl
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              defaultvalue="1"
              type="checkbox"
              value="1"
            />
             coordinator@42.nl
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              defaultvalue="2"
              type="checkbox"
              value="2"
            />
             user@42.nl
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Component: ValuePicker > multiple > ModalPickerMultiple > should render a \`ModalPickerMultiple\` when async page \`totalElements\` is more than 10 1`] = `
<DocumentFragment>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
    >
      Best friend
    </label>
    <div
      class="d-flex align-items-center"
    >
      <button
        class="flex-grow-0 flex-shrink-0 btn btn-primary"
        type="button"
      >
        <i
          class="icon me-2 align-bottom material-icons"
        >
          face
        </i>
        Select your best friend
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Component: ValuePicker > should when booting render a loading spinner and request an initial page 1`] = `
<div>
  <div
    class="d-flex"
  >
    <svg
      class="spinner align-self-center"
      height="16"
      viewBox="25 25 50 50"
      width="16"
    >
      <circle
        class="path"
        cx="50"
        cy="50"
        fill="none"
        r="20"
        stroke="black"
        stroke-miterlimit="10"
        stroke-width="4"
      />
    </svg>
    <span
      class="ms-1"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`Component: ValuePicker > single > ModalPickerSingle > should render a \`ModalPickerSingle\` when async page \`totalElements\` is more than than 10 1`] = `
<DocumentFragment>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
    >
      Best friend
    </label>
    <div
      class="d-flex align-items-center"
    >
      <button
        class="flex-grow-0 flex-shrink-0 btn btn-primary"
        type="button"
      >
        <i
          class="icon me-2 align-bottom material-icons"
        >
          face
        </i>
        Select your best friend
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Component: ValuePicker > single > RadioGroup > should render a \`RadioGroup\` component when async page \`totalElements\` is less than 4 1`] = `
<DocumentFragment>
  <fieldset
    class="radio-group  mb-3"
  >
    <legend>
      Best friend
    </legend>
    <p>
      <em>
        Select your best friend
      </em>
    </p>
    <div
      class="form-check"
    >
      <label
        class="form-check-label"
      >
        <input
          class="form-check-input"
          defaultvalue="admin@42.nl"
          type="radio"
          value="admin@42.nl"
        />
         admin@42.nl
      </label>
    </div>
    <div
      class="form-check"
    >
      <label
        class="form-check-label"
      >
        <input
          class="form-check-input"
          defaultvalue="coordinator@42.nl"
          type="radio"
          value="coordinator@42.nl"
        />
         coordinator@42.nl
      </label>
    </div>
    <div
      class="form-check"
    >
      <label
        class="form-check-label"
      >
        <input
          class="form-check-input"
          defaultvalue="user@42.nl"
          type="radio"
          value="user@42.nl"
        />
         user@42.nl
      </label>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`Component: ValuePicker > single > Select > should render a \`Select\` component when async page \`totalElements\` is less than 11 but more than 3 1`] = `
<DocumentFragment>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="bestFriend"
    >
      Best friend
    </label>
    <select
      class="showing-placeholder form-select"
      id="bestFriend"
      placeholder="Select your best friend"
    >
      <option>
        Select your best friend
      </option>
      <option
        value="0"
      >
        admin@42.nl
      </option>
      <option
        value="1"
      >
        coordinator@42.nl
      </option>
      <option
        value="2"
      >
        user@42.nl
      </option>
      <option
        value="3"
      >
        nobody@42.nl
      </option>
    </select>
  </div>
</DocumentFragment>
`;
